platform/visual-studio-code/super-factory-manager-language/src/generated/SFMLParser.ts
// Generated from syntaxes/SFML.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SFMLListener } from "./SFMLListener";
import { SFMLVisitor } from "./SFMLVisitor";


export class SFMLParser extends Parser {
	public static readonly IF = 1;
	public static readonly THEN = 2;
	public static readonly ELSE = 3;
	public static readonly HAS = 4;
	public static readonly OVERALL = 5;
	public static readonly SOME = 6;
	public static readonly ONE = 7;
	public static readonly LONE = 8;
	public static readonly TRUE = 9;
	public static readonly FALSE = 10;
	public static readonly NOT = 11;
	public static readonly AND = 12;
	public static readonly OR = 13;
	public static readonly GT = 14;
	public static readonly GT_SYMBOL = 15;
	public static readonly LT = 16;
	public static readonly LT_SYMBOL = 17;
	public static readonly EQ = 18;
	public static readonly EQ_SYMBOL = 19;
	public static readonly LE = 20;
	public static readonly LE_SYMBOL = 21;
	public static readonly GE = 22;
	public static readonly GE_SYMBOL = 23;
	public static readonly FROM = 24;
	public static readonly TO = 25;
	public static readonly INPUT = 26;
	public static readonly OUTPUT = 27;
	public static readonly WHERE = 28;
	public static readonly SLOTS = 29;
	public static readonly SLOT = 30;
	public static readonly RETAIN = 31;
	public static readonly EACH = 32;
	public static readonly EXCEPT = 33;
	public static readonly FORGET = 34;
	public static readonly EMPTY = 35;
	public static readonly IN = 36;
	public static readonly WITHOUT = 37;
	public static readonly WITH = 38;
	public static readonly TAG = 39;
	public static readonly HASHTAG = 40;
	public static readonly ROUND = 41;
	public static readonly ROBIN = 42;
	public static readonly BY = 43;
	public static readonly LABEL = 44;
	public static readonly BLOCK = 45;
	public static readonly TOP = 46;
	public static readonly BOTTOM = 47;
	public static readonly NORTH = 48;
	public static readonly EAST = 49;
	public static readonly SOUTH = 50;
	public static readonly WEST = 51;
	public static readonly SIDE = 52;
	public static readonly LEFT = 53;
	public static readonly RIGHT = 54;
	public static readonly FRONT = 55;
	public static readonly BACK = 56;
	public static readonly NULL = 57;
	public static readonly TICKS = 58;
	public static readonly TICK = 59;
	public static readonly SECONDS = 60;
	public static readonly SECOND = 61;
	public static readonly GLOBAL = 62;
	public static readonly PLUS = 63;
	public static readonly OFFSET = 64;
	public static readonly FRAME = 65;
	public static readonly FOR = 66;
	public static readonly MOD = 67;
	public static readonly RENDER = 68;
	public static readonly IMAGE = 69;
	public static readonly REDSTONE = 70;
	public static readonly PULSE = 71;
	public static readonly DO = 72;
	public static readonly END = 73;
	public static readonly NAME = 74;
	public static readonly LET = 75;
	public static readonly BE = 76;
	public static readonly PLAYER = 77;
	public static readonly OF = 78;
	public static readonly LIKE = 79;
	public static readonly OBJECT = 80;
	public static readonly FIELD = 81;
	public static readonly GUID = 82;
	public static readonly STRING_TYPE = 83;
	public static readonly INVOKE = 84;
	public static readonly CAPABILITY = 85;
	public static readonly AS = 86;
	public static readonly CREATE = 87;
	public static readonly BROADCAST = 88;
	public static readonly CHANNEL = 89;
	public static readonly NEW = 90;
	public static readonly CLIENT = 91;
	public static readonly SERVER = 92;
	public static readonly BTW = 93;
	public static readonly JSON = 94;
	public static readonly EVERY = 95;
	public static readonly COMMA = 96;
	public static readonly COLON = 97;
	public static readonly SLASH = 98;
	public static readonly DASH = 99;
	public static readonly LPAREN = 100;
	public static readonly RPAREN = 101;
	public static readonly NUMBER_WITH_G_SUFFIX = 102;
	public static readonly NUMBER = 103;
	public static readonly IDENTIFIER = 104;
	public static readonly STRING = 105;
	public static readonly LINE_COMMENT = 106;
	public static readonly WS = 107;
	public static readonly UNUSED = 108;
	public static readonly RULE_program = 0;
	public static readonly RULE_executionSideDeclaration = 1;
	public static readonly RULE_name = 2;
	public static readonly RULE_declaration = 3;
	public static readonly RULE_valuePattern = 4;
	public static readonly RULE_patternField = 5;
	public static readonly RULE_trigger = 6;
	public static readonly RULE_frameLabels = 7;
	public static readonly RULE_interval = 8;
	public static readonly RULE_timeUnit = 9;
	public static readonly RULE_block = 10;
	public static readonly RULE_statement = 11;
	public static readonly RULE_renderImageStatement = 12;
	public static readonly RULE_letValueStatement = 13;
	public static readonly RULE_valueExpression = 14;
	public static readonly RULE_constructionField = 15;
	public static readonly RULE_fieldValueExpression = 16;
	public static readonly RULE_createStatement = 17;
	public static readonly RULE_broadcastStatement = 18;
	public static readonly RULE_forgetStatement = 19;
	public static readonly RULE_inputStatement = 20;
	public static readonly RULE_inputSelection = 21;
	public static readonly RULE_inputBinding = 22;
	public static readonly RULE_outputStatement = 23;
	public static readonly RULE_inputResourceLimits = 24;
	public static readonly RULE_outputResourceLimits = 25;
	public static readonly RULE_resourceLimitList = 26;
	public static readonly RULE_resourceLimit = 27;
	public static readonly RULE_limit = 28;
	public static readonly RULE_quantity = 29;
	public static readonly RULE_retention = 30;
	public static readonly RULE_resourceExclusion = 31;
	public static readonly RULE_resourceId = 32;
	public static readonly RULE_resourceIdList = 33;
	public static readonly RULE_resourceIdDisjunction = 34;
	public static readonly RULE_with = 35;
	public static readonly RULE_withClause = 36;
	public static readonly RULE_tagMatcher = 37;
	public static readonly RULE_qualifiedId = 38;
	public static readonly RULE_invokeActionId = 39;
	public static readonly RULE_sidequalifier = 40;
	public static readonly RULE_side = 41;
	public static readonly RULE_slotqualifier = 42;
	public static readonly RULE_rangeset = 43;
	public static readonly RULE_range = 44;
	public static readonly RULE_ifStatement = 45;
	public static readonly RULE_boolexpr = 46;
	public static readonly RULE_comparisonOp = 47;
	public static readonly RULE_setOp = 48;
	public static readonly RULE_labelAccess = 49;
	public static readonly RULE_roundrobin = 50;
	public static readonly RULE_label = 51;
	public static readonly RULE_emptyslots = 52;
	public static readonly RULE_identifier = 53;
	public static readonly RULE_string = 54;
	public static readonly RULE_number = 55;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "executionSideDeclaration", "name", "declaration", "valuePattern",
		"patternField", "trigger", "frameLabels", "interval", "timeUnit", "block",
		"statement", "renderImageStatement", "letValueStatement", "valueExpression",
		"constructionField", "fieldValueExpression", "createStatement", "broadcastStatement",
		"forgetStatement", "inputStatement", "inputSelection", "inputBinding",
		"outputStatement", "inputResourceLimits", "outputResourceLimits", "resourceLimitList",
		"resourceLimit", "limit", "quantity", "retention", "resourceExclusion",
		"resourceId", "resourceIdList", "resourceIdDisjunction", "with", "withClause",
		"tagMatcher", "qualifiedId", "invokeActionId", "sidequalifier", "side",
		"slotqualifier", "rangeset", "range", "ifStatement", "boolexpr", "comparisonOp",
		"setOp", "labelAccess", "roundrobin", "label", "emptyslots", "identifier",
		"string", "number",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, "'>'", undefined, "'<'", undefined, "'='", undefined, "'<='",
		undefined, "'>='", undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, "'#'", undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, "','", "':'", "'/'", "'-'",
		"'('", "')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "IF", "THEN", "ELSE", "HAS", "OVERALL", "SOME", "ONE", "LONE",
		"TRUE", "FALSE", "NOT", "AND", "OR", "GT", "GT_SYMBOL", "LT", "LT_SYMBOL",
		"EQ", "EQ_SYMBOL", "LE", "LE_SYMBOL", "GE", "GE_SYMBOL", "FROM", "TO",
		"INPUT", "OUTPUT", "WHERE", "SLOTS", "SLOT", "RETAIN", "EACH", "EXCEPT",
		"FORGET", "EMPTY", "IN", "WITHOUT", "WITH", "TAG", "HASHTAG", "ROUND",
		"ROBIN", "BY", "LABEL", "BLOCK", "TOP", "BOTTOM", "NORTH", "EAST", "SOUTH",
		"WEST", "SIDE", "LEFT", "RIGHT", "FRONT", "BACK", "NULL", "TICKS", "TICK",
		"SECONDS", "SECOND", "GLOBAL", "PLUS", "OFFSET", "FRAME", "FOR", "MOD",
		"RENDER", "IMAGE", "REDSTONE", "PULSE", "DO", "END", "NAME", "LET", "BE",
		"PLAYER", "OF", "LIKE", "OBJECT", "FIELD", "GUID", "STRING_TYPE", "INVOKE",
		"CAPABILITY", "AS", "CREATE", "BROADCAST", "CHANNEL", "NEW", "CLIENT",
		"SERVER", "BTW", "JSON", "EVERY", "COMMA", "COLON", "SLASH", "DASH", "LPAREN",
		"RPAREN", "NUMBER_WITH_G_SUFFIX", "NUMBER", "IDENTIFIER", "STRING", "LINE_COMMENT",
		"WS", "UNUSED",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SFMLParser._LITERAL_NAMES, SFMLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SFMLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SFML.g4"; }

	// @Override
	public get ruleNames(): string[] { return SFMLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SFMLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SFMLParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SFMLParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SFMLParser.CLIENT || _la === SFMLParser.SERVER) {
				{
				this.state = 112;
				this.executionSideDeclaration();
				}
			}

			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SFMLParser.NAME) {
				{
				this.state = 115;
				this.name();
				}
			}

			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SFMLParser.LET) {
				{
				{
				this.state = 118;
				this.declaration();
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SFMLParser.EVERY) {
				{
				{
				this.state = 124;
				this.trigger();
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 130;
			this.match(SFMLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public executionSideDeclaration(): ExecutionSideDeclarationContext {
		let _localctx: ExecutionSideDeclarationContext = new ExecutionSideDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SFMLParser.RULE_executionSideDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			_la = this._input.LA(1);
			if (!(_la === SFMLParser.CLIENT || _la === SFMLParser.SERVER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 133;
			this.match(SFMLParser.BTW);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SFMLParser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(SFMLParser.NAME);
			this.state = 136;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SFMLParser.RULE_declaration);
		try {
			this.state = 151;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				_localctx = new PlayerDeclarationContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 138;
				this.match(SFMLParser.LET);
				this.state = 139;
				this.identifier();
				this.state = 140;
				this.match(SFMLParser.BE);
				this.state = 141;
				this.match(SFMLParser.PLAYER);
				this.state = 142;
				this.match(SFMLParser.OF);
				this.state = 143;
				this.identifier();
				}
				break;

			case 2:
				_localctx = new PatternDeclarationContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 145;
				this.match(SFMLParser.LET);
				this.state = 146;
				this.identifier();
				this.state = 147;
				this.match(SFMLParser.BE);
				this.state = 148;
				this.match(SFMLParser.LIKE);
				this.state = 149;
				this.valuePattern();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public valuePattern(): ValuePatternContext {
		let _localctx: ValuePatternContext = new ValuePatternContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SFMLParser.RULE_valuePattern);
		let _la: number;
		try {
			this.state = 169;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				_localctx = new GuidValuePatternContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 153;
				this.match(SFMLParser.GUID);
				}
				break;

			case 2:
				_localctx = new StringValuePatternContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 154;
				this.match(SFMLParser.STRING_TYPE);
				}
				break;

			case 3:
				_localctx = new LiteralValuePatternContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 155;
				this.string();
				}
				break;

			case 4:
				_localctx = new ObjectValuePatternContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 156;
				this.match(SFMLParser.OBJECT);
				this.state = 157;
				this.match(SFMLParser.WITH);
				this.state = 158;
				this.match(SFMLParser.FIELD);
				this.state = 159;
				this.patternField();
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SFMLParser.AND) {
					{
					{
					this.state = 160;
					this.match(SFMLParser.AND);
					this.state = 161;
					this.match(SFMLParser.FIELD);
					this.state = 162;
					this.patternField();
					}
					}
					this.state = 167;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;

			case 5:
				_localctx = new AliasValuePatternContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 168;
				this.identifier();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public patternField(): PatternFieldContext {
		let _localctx: PatternFieldContext = new PatternFieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SFMLParser.RULE_patternField);
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				_localctx = new LiteralPatternFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 171;
				this.identifier();
				this.state = 172;
				this.match(SFMLParser.OF);
				this.state = 173;
				this.string();
				}
				break;

			case 2:
				_localctx = new LikePatternFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 175;
				this.identifier();
				this.state = 176;
				this.match(SFMLParser.LIKE);
				this.state = 177;
				this.identifier();
				}
				break;
